static/css/style.css
* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

main {
    flex: 1;
}

/* ----- nav bar ----- */

.nav-bg {
    background-color: #252525;
}

.search-btn {
    background-color: #252525;
    color: #f26749;
    border: 1px solid #f26749;
  }
  
  .search-btn:hover {
    background-color: #f26749;
    color: white;
  }

/* ----- hero image ----- */

.image-container{
    background-color: black;
    color: white;
    position: relative;
    text-align: center;
}

.centered-main-title{
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    border: solid 2px white;
    padding: 15px;
}

.hero-image{
    max-height: 900px;
    width: 100%;
}

/* ----- about section ----- */

.text-center{
    align-self: center;
    text-align: center;
}

.heading-space{
    margin: 15px 0 20px 0;
}

.home-hr{
    margin: auto;
    width: 60%;
}

.new-label {
    position: absolute;
    top: 3%;
    left: 5%;
    min-width: 30%;
    background-color: #51ac15;
}

.new-text {
    color: white;
    margin: 4px;
}

/* footer */

footer{
    margin-top: 40px;
    width: 100%;
    position: absolute;
    bottom: 0;
    display: contents;
}

.footer-bg {
    background-color: #252525;
    color: #e8e8e8;
}

.footer-link{
    text-decoration: none;
    color: #e8e8e8;
}

.footer-social-links{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

ul.fa-ul{
    margin-left: 0;
}

/* .light-grey-text, li > p {
    color: #4c4e52;
} */

.open-hours{
    color: e8e8e8;
    font-weight: 600;
}

.footer-copyright{
    color: #e8e8e8;
    max-width: 100%;
}

/* ----- projects page ----- */

.card {
    border: none;
    background-color: transparent;
}

/* ensuring image fits container */
.project-image-container {
    position: relative;
    height: 400px;
    overflow: hidden;
}

.project-card-image-top {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.author-label {
    position: absolute;
    bottom: 5%;
    min-width: 30%;
    left: -2px;
    background-color: #f26749;
}

.author {
    color: white;
    margin: 4px 4px 4px 8px;
    text-transform: uppercase;
}

.project-title {
    margin-left: 10px;
    font-weight: 550;
}

/* Minimising display of description text */
/* Utilises vertical scrollbar upon content overflow */
.project-description {
    margin-left: 10px;
    max-height: 72px;
    white-space: normal;
    line-height: 24px;
    overflow-y: auto;
}

.project-info {
    margin-left: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
}

.read-article {
    margin: 10px 15px 0 0;
    color: #3a3a3a;
}

.like-counter {
    margin-left: 5px;
}

.project-link {
    text-decoration: none;
    color: #3a3a3a;
}

.project-link:hover,
.page-link {
    color: #d12600;
}

.page-btn {
    -webkit-border-radius: 10;
    -moz-border-radius: 10;
    border-radius: 10px;
    background-color: white;
    color: #f26749;
    border: 1px solid #f26749;
    font-size: 18px;
    padding: 10px 20px 10px 20px;
    text-decoration: none;
  }
  
  .page-btn:hover {
    background-color: #f26749;
    color: white;
    text-decoration: none;
  }

/* ----- project detail page ----- */

.project-banner {
    margin-top: 10px;
    overflow: hidden;
    position: relative;
    display: inline-block;
    height: 33vh;
    width: 100%;
}

.project-banner-text {
    background-color: #f26749;
    color: white;
    position: relative;
}

.project-banner-image {
    position: relative;
    overflow: hidden;
}

.project-banner-image:after {
    content: "";
    position: absolute;
    top: 0;
    right: 90%;
    height: 100%;
    width: 150%;
    background: #f26749;
    -webkit-transform: skew(15deg);
    -moz-transform: skew(15deg);
    transform: skew(15deg);
    z-index: 100;
}

.post-title {
    margin-top: 18%;
    margin-left: 5%;
}

.post-subtitle {
    margin-left: 5%;
    color: lightgray;
}

.like-btn {
    color: #E84610;
    border: none;
    background: transparent;
}

.like-btn:hover,
.like-btn:active {
    color: #E84610;
    background: transparent;
    border: none;
}

/* ----- Auth pages ----- */


.auth-bg-img {
    background: url('/static/images/login-bg-img.jpg') center center fixed;
    background-size: cover;
}


form.signup > p > input,
form.login > p > input {
    border: 1px solid #3a3a3aa6;
    border-radius: 3px;
    padding: 2px;
    margin-top: 3px;
    width: 300px;
}

#id_remember {
    width: 20px;
}

/* Add semi-transparent bg to form */

.auth-bg {
    max-width: 40%;
    background-color: rgba(255, 255, 255, 0.8);
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
}

.signup-btn {
    background-color: #f26749;
    color: #fff;
}

.signup-btn:hover,
.signup-btn:active {
    background-color: #fff;
    color: #f26749;
    border: 1px solid #f26749;
}

.auth-link {
    color: #f26749;
    text-decoration: none;
}

.auth-link:hover,
.auth-link:active {
    color: #d12600;
    text-decoration: underline;
}

/* ----- Media Queries ----- */

@media (min-width: 1400px) {
    .read-article-home {
        margin-left: 5.2px;
    }

    .about{
        width: 50%;
    }
}

@media (max-width: 1400px) {
    .auth-bg {
        max-width: 50%;
    }
}

@media (max-width: 1300px) {
    .project-image-container {
        height: 350px;
    }

    .auth-bg {
        max-width: 60%;
    }
}

@media (max-width: 990px) {
    .project-image-container {
        height: 300px;
    }

    .project-banner {
        height: 200px;
    }

    .auth-bg {
        max-width: 70%;
    }
    
}

@media (max-width: 900px) {
    .project-image-container {
        height: 200px;
    }

    .like-counter {
        margin-left: 0;
    }

    .auth-bg {
        max-width: 80%;
    }
}

@media (max-width: 767px) {
    .project-image-container {
        height: 300px;
    }

    .project-banner {
        height: 500px;
    }

    .project-banner-image:after {
        display: none;
    }

    .post-title {
        margin-top: 15%;
    }

    .auth-bg {
        max-width: 85%;
    }
    
}

@media (max-width: 575px) {

    .project-banner {
        height: 400px;
    }
    
}

@media (max-width: 375px) {

    p > input {
        width: 250px;
    }
    
}

